feat: update Astro configuration to use Vercel adapter and add necessary dependencies
- Replaced the Node adapter with the Vercel adapter in `astro.config.mjs`.
- Added `@astrojs/vercel` as a dependency in `package.json` and `package-lock.json`.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.2.7",
+    "@astrojs/vercel": "^8.2.0",
     "@fontsource/manrope": "^5.2.5",
     "@portabletext/react": "^3.2.1",
     "@sanity-typed/types": "^8.0.0",
