--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sanity/astro": "^3.2.6",
     "@sanity/client": "^6.29.1",
     "@sanity/image-url": "^1.1.0",
+    "@sanity/orderable-document-list": "^1.3.4",
     "@tailwindcss/vite": "^4.1.6",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
