環境に基づいてアダプターを選択するロジックをastro.config.mjsに追加し、package.jsonにビルドおよびプレビュー用のスクリプトを追加しました。また、Layoutコンポーネントでアニメーションのリセット処理を実装しました。

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
+    "build:preview": "ASTRO_PREVIEW=true astro build",
+    "preview": "ASTRO_PREVIEW=true astro preview",
     "astro": "astro"
   },
   "dependencies": {
