--- a/package.json
+++ b/package.json
@@ -10,15 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.5",
+    "@astrojs/mdx": "^4.3.11",
     "@astrojs/react": "^4.2.7",
     "@astrojs/vercel": "^8.2.0",
     "@fontsource/manrope": "^5.2.5",
-    "@portabletext/react": "^3.2.1",
-    "@sanity-typed/types": "^8.0.0",
-    "@sanity/astro": "^3.2.6",
-    "@sanity/client": "^6.29.1",
-    "@sanity/image-url": "^1.1.0",
-    "@sanity/orderable-document-list": "^1.3.4",
     "@tailwindcss/vite": "^4.1.6",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
@@ -26,13 +22,11 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-is": "^19.1.0",
-    "react-player": "^2.16.0",
-    "react-social-media-embed": "^2.5.18",
-    "sanity": "^3.88.2",
-    "styled-components": "^6.1.18"
+    "typescript": "^5.9.3",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
-    "@astrojs/node": "^9.2.1",
+    "@tailwindcss/typography": "^0.5.19",
     "tailwindcss": "^4.1.6"
   }
 }
