feat: Obsidian設定ファイルをgitignoreに追加し、追跡対象から除外しました。

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,9 @@ pnpm-debug.log*
 
 # sanity
 .sanity/
+
+# obsidian
+# Obsidian
+**/.obsidian/workspace.json
+**/.obsidian/workspace
+**/.obsidian/cache
