--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "astro build",
     "build:preview": "ASTRO_PREVIEW=true astro build",
     "preview": "ASTRO_PREVIEW=true astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@astrojs/check": "^0.9.5",
@@ -27,6 +30,15 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
+    "@typescript-eslint/eslint-plugin": "^8.48.1",
+    "@typescript-eslint/parser": "^8.48.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-astro": "^1.5.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "prettier": "^3.7.4",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4.1.6"
   }
 }
