--- a/.prettierrc
+++ b/.prettierrc
@@ -8,8 +8,6 @@
       }
     }
   ],
-  "tabWidth": 2,
-  "useTabs": false,
-  "singleQuote": true,
-  "semi": true
+  "printWidth": 120,
+  "singleQuote": true
 }
