--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@astrojs/check": "^0.9.5",
     "@astrojs/mdx": "^4.3.11",
     "@astrojs/react": "^4.2.7",
-    "@astrojs/vercel": "^8.2.0",
     "@fontsource/manrope": "^5.2.5",
     "@tailwindcss/vite": "^4.1.6",
     "@types/react": "^19.1.3",
@@ -24,13 +23,14 @@
     "astro": "^5.7.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-is": "^19.1.0",
     "typescript": "^5.9.3",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/hast": "^3.0.4",
+    "@types/mdast": "^4.0.4",
     "eslint": "^9.39.1",
     "eslint-plugin-astro": "^1.5.0",
     "eslint-plugin-react": "^7.37.5",
