--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/check": "^0.9.5",
     "@astrojs/mdx": "^4.3.11",
     "@astrojs/react": "^4.2.7",
+    "@astrojs/sitemap": "^3.6.0",
     "@fontsource/manrope": "^5.2.5",
     "@tailwindcss/vite": "^4.1.6",
     "@types/react": "^19.1.3",
