--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@astrojs/mdx": "^4.3.12",
     "@astrojs/react": "^4.4.2",
     "@astrojs/sitemap": "^3.6.0",
-    "@fontsource/manrope": "^5.2.5",
     "@tailwindcss/vite": "^4.1.6",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "astro": "^5.16.4",
+    "astro-google-fonts-optimizer": "^0.2.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "typescript": "^5.9.3",
@@ -36,6 +36,7 @@
     "@types/hast": "^3.0.4",
     "@types/mdast": "^4.0.4",
     "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.5.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
