--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@astrojs/mdx": "^4.3.12",
     "@astrojs/react": "^4.4.2",
     "@astrojs/sitemap": "^3.6.0",
+    "@iconify-json/tabler": "^1.2.23",
+    "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.6",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "astro": "^5.16.4",
     "astro-google-fonts-optimizer": "^0.2.2",
+    "astro-icon": "^1.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "typescript": "^5.9.3",
