--- a/package.json
+++ b/package.json
@@ -18,18 +18,15 @@
   "dependencies": {
     "@astrojs/check": "^0.9.6",
     "@astrojs/mdx": "^4.3.12",
-    "@astrojs/react": "^4.4.2",
     "@astrojs/sitemap": "^3.6.0",
+    "@astrojs/svelte": "^7.2.3",
     "@iconify-json/tabler": "^1.2.23",
-    "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.6",
-    "@types/react": "^19.1.3",
-    "@types/react-dom": "^19.1.3",
     "astro": "^5.16.4",
     "astro-google-fonts-optimizer": "^0.2.2",
     "astro-icon": "^1.1.5",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "svelte": "^5.46.0",
+    "svelte-inview": "^4.0.4",
     "typescript": "^5.9.3",
     "unist-util-visit": "^5.0.0"
   },
@@ -41,11 +38,11 @@
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.5.0",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-svelte": "^3.13.1",
     "globals": "^16.5.0",
     "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4.1.6",
     "typescript-eslint": "^8.48.1"
